--- a/style/style.less
+++ b/style/style.less
@@ -17,48 +17,68 @@ html, body {
     }
 
     .start-comparison {
-        text-align: center;
-        width: 250px;
-        margin: auto;
+        // text-align: center;
+        // width: 250px;
+        // margin: auto;
+        button {
+            width: 100%;
+        }
     }
 }
 
 .item-selection {
-    text-align: center;
-    margin: 30px 0 30px 0;
+    margin: 30px 0;
+
+    .item-selection-header{
+       text-align: center; 
+    }
 
     .item-selection-list {
-        text-align: left;
+        margin: 20px 0;
         width: 100%;
 
         .item-selection-line {
-            width: 250px;
-            margin: auto;
+            margin: 5px 0;
 
             .item-selection-line-input {
-                width: 200px;
+                // width: 200px;
+                width: 90%;
+                display: inline-block;
             }
 
             .item-selection-line-remove {
+                // width: 100%;
             }
         }
     }
 
     .item-selection-add-new {
-        text-align: center;
-        width: 250px;
-        margin: auto;
+        // text-align: center;
+        // width: 250px;
+        // margin: auto;
+        button {
+            width: 100%;
+        }
     }
 }
 
 .item-comparison {
-    text-align: center;
+    .item-comparison-header {
+        text-align: center;
+    }
 
     .item-comparison-choices {
-        width: 100%;
+        margin: 20px 0;
+        text-align: center;
 
         button {
-            margin: 0 20px;
+            // margin: 0 10px;
+            width: 35%;
+        }
+
+        .separator {
+            display: inline-block;
+            width: 25%;
         }
     }
 }
