Styled the page title and description

--- a/style/style.less
+++ b/style/style.less
@@ -7,6 +7,14 @@ html, body {
     // font-family: 'Calibri';
 }
 
+.page-title {
+    text-align: center;
+}
+
+.page-description {
+    text-align: center;
+}
+
 .pref-matrix-app {
     .header-reset-button {
         text-align: center;
