--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+.page-title {
+  text-align: center;
+}
+.page-description {
+  text-align: center;
+}
 .pref-matrix-app .header-reset-button {
   text-align: center;
 }
