--- a/style/style.less
+++ b/style/style.less
@@ -32,6 +32,15 @@ html, body {
             width: 100%;
         }
     }
+
+    .phase-status {
+        text-align: center;
+        margin: 30px 0 10px 0;
+
+        [data-selected='yes'] {
+            font-weight: bold;
+        }
+    }
 }
 
 .item-selection {
