Added a project description

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .page-description {
-  text-align: center;
+  text-align: justify;
 }
 .pref-matrix-app .header-reset-button {
   text-align: center;
