--- a/style/style.less
+++ b/style/style.less
@@ -101,5 +101,10 @@ html, body {
 }
 
 .comparison-results {
-    margin: 30px 0 0 0;
+    margin: 30px 0 70px 0;
+
+    h4 {
+        text-align: center;
+    }
+
 }
