--- a/style/style.less
+++ b/style/style.less
@@ -16,6 +16,8 @@ html, body {
 }
 
 .pref-matrix-app {
+    margin: 0 0 50px 0;
+    
     .header-reset-button {
         text-align: center;
     }
